--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -9,7 +9,7 @@
 
 <h3>Sign up to get started!</h3>
 
-<form  action="users_path" method="post">
+<form action="<%= users_path %>" method="POST"
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
   <input type="email" name="user[email]" placeholder="your email">
