added current_user method

--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -10,13 +10,15 @@
 <h3>Sign up to get started!</h3>
 
 <form action="<%= users_path %>" method="POST"
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+    autocomplete="false">
+  <input type="hidden" name="authenticity_token"
+    value="<%= form_authenticity_token %>">
 
-  <input type="email" name="user[email]" placeholder="your email">
-  <input type="password" name="user[password]" placeholder="your password">
-
-  <input type="submit" value="Sign up!">
-
+  <input type="email" name="user[email]"
+    placeholder="your email address"><br/>
+  <input type="password" name="user[password]"
+    placeholder="your password"><br/>
+  <input type="submit" value="Sign up">
 </form>
 
 <h3>Sign in if you have an account</h3>
