--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -31,3 +31,13 @@
   <input type="submit" value="Sign in!">
 
 </form>
+
+<% if current_user %>
+<hr/>
+<form action="<%= session_path %>" method="POST">
+  <input type="hidden" name="authenticity_token"
+    value="<%= form_authenticity_token %>">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Log Out!">
+</form>
+<% end %>
