--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,3 +27,67 @@ div.flash {
   padding: 1rem;
   background: rgb(184, 253, 255);
 }
+
+#logo {
+  font-size: 24px;
+}
+
+.navbar {
+  font-family: 'Abel', sans-serif;
+  margin-bottom: 1em;
+}
+
+.emotions input{
+  margin: 0;
+  padding: 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.mood img {
+  height: 75px;
+  width: 75px;
+}
+
+.emotions input:active +.mood{
+  opacity: .9;
+}
+
+.emotions input:checked +.mood{
+  -webkit-filter: none;
+  -moz-filter: none;
+  filter: none;
+}
+
+.mood{
+  cursor: pointer;
+  background-size:contain;
+  background-repeat:no-repeat;
+  height: 75px;
+  width: 75px;
+  -webkit-transition: all 100ms ease-in;
+  -moz-transition: all 100ms ease-in;
+  transition: all 100ms ease-in;
+  -webkit-filter: brightness(1.8) grayscale(1) opacity(.7);
+  -moz-filter: brightness(1.8) grayscale(1) opacity(.7);
+  filter: brightness(1.8) grayscale(1) opacity(.7);
+}
+
+.mood:hover {
+  -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
+  -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
+  filter: brightness(1.2) grayscale(.5) opacity(.9);
+}
+
+input[type='radio'].mood-select:checked + label {
+
+    -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
+    -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
+    filter: brightness(1.2) grayscale(.5) opacity(.9);
+
+}
+
+input[type=radio] {
+    visibility:hidden;
+}
