--- a/app/views/angular.html.erb
+++ b/app/views/angular.html.erb
@@ -1,34 +1,115 @@
-<!DOCTYPE html>
-<html ng-app="MoodApp">
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-
-    <link rel="stylesheet" type="text/css" href="style.css">
-
-    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-
-    <meta charset="utf-8">
-
-    <%= stylesheet_link_tag 'angular', media: 'all', 'data-turbolinks-track' => true %>
-   <%= csrf_meta_tags %>
-
-    <title>SENSUS</title>
-
-  </head>
-
-  <body>
-
-    <header ng-controller="HeaderController as header">
-      <h1> Welcome, {{ header.current_user.email }} </h1>
-    </header>
+<!-- the mood form -->
+<main ng-controller="MoodController as mood">
+<form ng-submit='mood.createMood()'>
 
 
+  <div id="emotions">
+    Pick an emoji that best represents your mood:
+    <br/>
+    <br/>
+
+    <input id="one"
+           class="mood-select"
+            type="radio"
+            value="1"
+            name="mood"
+            ng-model = "mood.happiness"/>
+    <label class="mood one"
+           for="one"><%= image_tag "1.png" %></label>
 
 
+    <input id="two"
+    class="mood-select"
+           type="radio"
+           value="2"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood two"
+           for="two"><%= image_tag "2.png" %></label>
 
-<%= javascript_include_tag 'angular', 'data-turbolinks-track' => true %>
-  </body>
+    <input id="three"
+    class="mood-select"
+           type="radio"
+           value="3"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood three"
+           for="three"><%= image_tag "3.png" %></label>
 
-</html>
+
+    <input id="four"
+    class="mood-select"
+           type="radio"
+           value="4"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood four"
+           for="four"><%= image_tag "4.png" %></label>
+
+
+    <input id="five"
+    class="mood-select"
+           type="radio"
+           value="5"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood five"
+           for="five"><%= image_tag "5.png" %></label>
+
+
+    <input id="six"
+    class="mood-select"
+           type="radio"
+           value="6"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood six" for="six"><%= image_tag "6.png" %></label>
+
+
+    <input id="seven"
+    class="mood-select"
+           type="radio"
+           value="7"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood seven" for="seven"><%= image_tag "7.png" %></label>
+
+
+    <input id="eight"
+    class="mood-select"
+           type="radio"
+           value="8"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood eight"
+           for="eight"><%= image_tag "8.png" %></label>
+
+
+    <input id="nine"
+    class="mood-select"
+           type="radio"
+           value="9"
+           name="mood"
+           ng-model = "mood.happiness">
+    <label class="mood nine"
+           for="nine"><%= image_tag "9.png" %></label>
+    </input>
+
+    <input id="ten"
+    class="mood-select"
+           type="radio"
+           value="10"
+           name="mood"
+           ng-model = "mood.happiness"/>
+    <label class="mood ten"
+           for="ten"><%= image_tag "10.png" %></label>
+
+
+<!-- the factor form -->
+<div ng-controller="FactorController as factor" ng-show="mood.happiness != null">
+  Why do you feel that way?<br/>
+  <input type="text" ng-model="factor.blurb">
+</div>
+<input type="submit" value="DUMMY SUBMIT BUTTON">
+</form>
+</main>
