--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <% if flash[:message] %>
+  <div class="flash">
+    <%= flash[:message] %>
+  </div>
+  <% end %>
 <%= yield %>
 
+<% if current_user %>
+<hr/>
+<form action="<%= session_path %>" method="POST">
+  <input type="hidden" name="authenticity_token"
+    value="<%= form_authenticity_token %>">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Log Out!">
+</form>
+<% end %>
 </body>
 </html>
