--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,3 +91,7 @@ input[type='radio'].mood-select:checked + label {
 input[type=radio] {
     visibility:hidden;
 }
+
+.blurbbox {
+    width: 75%;
+}
