--- a/app/views/angular.html.erb
+++ b/app/views/angular.html.erb
@@ -8,45 +8,59 @@
     <br/>
     <br/>
 
+
+<!-- one -->
     <input id="one"
            class="mood-select"
-            type="radio"
-            value="1"
-            name="mood"
-            ng-model = "mood.happiness"/>
+           type="radio"
+           value="1"
+           name="mood"
+           ng-model = "mood.happiness"/>
     <label class="mood one"
-           for="one"><%= image_tag "1.png" %></label>
+           for="one">
+      <%= image_tag "1.png" %>
+    </label>
 
 
+<!-- two -->
     <input id="two"
-    class="mood-select"
+           class="mood-select"
            type="radio"
            value="2"
            name="mood"
            ng-model = "mood.happiness"/>
     <label class="mood two"
-           for="two"><%= image_tag "2.png" %></label>
+           for="two">
+      <%= image_tag "2.png" %>
+    </label>
 
+
+<!-- three -->
     <input id="three"
-    class="mood-select"
+           class="mood-select"
            type="radio"
            value="3"
            name="mood"
            ng-model = "mood.happiness"/>
     <label class="mood three"
-           for="three"><%= image_tag "3.png" %></label>
+           for="three">
+      <%= image_tag "3.png" %>
+    </label>
 
-
+<!-- four -->
     <input id="four"
-    class="mood-select"
+           class="mood-select"
            type="radio"
            value="4"
            name="mood"
            ng-model = "mood.happiness"/>
     <label class="mood four"
-           for="four"><%= image_tag "4.png" %></label>
+           for="four">
+      <%= image_tag "4.png" %>
+    </label>
 
 
+<!-- five -->
     <input id="five"
     class="mood-select"
            type="radio"
@@ -54,62 +68,82 @@
            name="mood"
            ng-model = "mood.happiness"/>
     <label class="mood five"
-           for="five"><%= image_tag "5.png" %></label>
+           for="five">
+      <%= image_tag "5.png" %>
+    </label>
 
 
+<!-- six -->
     <input id="six"
-    class="mood-select"
+           class="mood-select"
            type="radio"
            value="6"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood six" for="six"><%= image_tag "6.png" %></label>
+    <label class="mood six"
+           for="six">
+      <%= image_tag "6.png" %>
+    </label>
 
 
+<!-- seven -->
     <input id="seven"
-    class="mood-select"
+           class="mood-select"
            type="radio"
            value="7"
            name="mood"
            ng-model = "mood.happiness"/>
-    <label class="mood seven" for="seven"><%= image_tag "7.png" %></label>
+    <label class="mood seven"
+           for="seven">
+      <%= image_tag "7.png" %>
+    </label>
 
 
+<!-- eight -->
     <input id="eight"
-    class="mood-select"
+           class="mood-select"
            type="radio"
            value="8"
            name="mood"
            ng-model = "mood.happiness"/>
     <label class="mood eight"
-           for="eight"><%= image_tag "8.png" %></label>
+           for="eight">
+      <%= image_tag "8.png" %>
+    </label>
 
 
+<!-- nine -->
     <input id="nine"
-    class="mood-select"
+           class="mood-select"
            type="radio"
            value="9"
            name="mood"
            ng-model = "mood.happiness">
     <label class="mood nine"
-           for="nine"><%= image_tag "9.png" %></label>
-    </input>
+           for="nine">
+      <%= image_tag "9.png" %>
+    </label>
 
+
+
+<!-- ten -->
     <input id="ten"
-    class="mood-select"
+           class="mood-select"
            type="radio"
            value="10"
            name="mood"
            ng-model = "mood.happiness"/>
     <label class="mood ten"
-           for="ten"><%= image_tag "10.png" %></label>
+           for="ten">
+      <%= image_tag "10.png" %>
+    </label>
 
 
 <!-- the factor form -->
 <div ng-controller="FactorController as factor" ng-show="mood.happiness != null">
   Why do you feel that way?<br/>
-  <input type="text" ng-model="factor.blurb">
+  <input class="blurbbox" type="text" ng-model="factor.blurb" maxlength="140">
 </div>
-<input type="submit" value="DUMMY SUBMIT BUTTON">
+<input type="submit" value="SUBMIT YOUR MOOD">
 </form>
 </main>
