--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -1,7 +1,5 @@
-
-
-<h1>Sensus</h1>
-<h2>Visualize your moods</h2>
+<h1>SENSUS</h1>
+<h2>visualize your moods</h2>
 
 <h3>Sign up to get started!</h3>
 
