--- a/app/views/angular.html.erb
+++ b/app/views/angular.html.erb
@@ -1,5 +1,5 @@
 <!-- the mood form -->
-<main ng-controller="MoodController as mood">
+<div ng-controller="MoodController as mood">
 <form ng-submit='mood.createMood()'>
 
 
@@ -8,14 +8,14 @@
     <br/>
     <br/>
 
-
 <!-- one -->
     <input id="one"
            class="mood-select"
            type="radio"
            value="1"
            name="mood"
-           ng-model = "mood.happiness"/>
+           ng-model = "mood.happiness"
+           ng-change ="mood.createMood()"/>
     <label class="mood one"
            for="one">
       <%= image_tag "1.png" %>
@@ -28,7 +28,8 @@
            type="radio"
            value="2"
            name="mood"
-           ng-model = "mood.happiness"/>
+           ng-model = "mood.happiness"
+           ng-change ="mood.createMood()"/>
     <label class="mood two"
            for="two">
       <%= image_tag "2.png" %>
@@ -41,7 +42,8 @@
            type="radio"
            value="3"
            name="mood"
-           ng-model = "mood.happiness"/>
+           ng-model = "mood.happiness"
+           ng-change ="mood.createMood()"/>
     <label class="mood three"
            for="three">
       <%= image_tag "3.png" %>
@@ -53,7 +55,8 @@
            type="radio"
            value="4"
            name="mood"
-           ng-model = "mood.happiness"/>
+           ng-model = "mood.happiness"
+           ng-change ="mood.createMood()"/>
     <label class="mood four"
            for="four">
       <%= image_tag "4.png" %>
@@ -66,7 +69,8 @@
            type="radio"
            value="5"
            name="mood"
-           ng-model = "mood.happiness"/>
+           ng-model = "mood.happiness"
+           ng-change ="mood.createMood()"/>
     <label class="mood five"
            for="five">
       <%= image_tag "5.png" %>
@@ -79,7 +83,8 @@
            type="radio"
            value="6"
            name="mood"
-           ng-model = "mood.happiness"/>
+           ng-model = "mood.happiness"
+           ng-change ="mood.createMood()"/>
     <label class="mood six"
            for="six">
       <%= image_tag "6.png" %>
@@ -92,7 +97,8 @@
            type="radio"
            value="7"
            name="mood"
-           ng-model = "mood.happiness"/>
+           ng-model = "mood.happiness"
+           ng-change ="mood.createMood()"/>
     <label class="mood seven"
            for="seven">
       <%= image_tag "7.png" %>
@@ -105,7 +111,8 @@
            type="radio"
            value="8"
            name="mood"
-           ng-model = "mood.happiness"/>
+           ng-model = "mood.happiness"
+           ng-change ="mood.createMood()"/>
     <label class="mood eight"
            for="eight">
       <%= image_tag "8.png" %>
@@ -118,7 +125,8 @@
            type="radio"
            value="9"
            name="mood"
-           ng-model = "mood.happiness">
+           ng-model = "mood.happiness"
+           ng-change ="mood.createMood()"/>
     <label class="mood nine"
            for="nine">
       <%= image_tag "9.png" %>
@@ -132,18 +140,26 @@
            type="radio"
            value="10"
            name="mood"
-           ng-model = "mood.happiness"/>
+           ng-model = "mood.happiness"
+           ng-change ="mood.createMood()"/>
     <label class="mood ten"
            for="ten">
       <%= image_tag "10.png" %>
     </label>
-
+</form>
+</div>
 
 <!-- the factor form -->
 <div ng-controller="FactorController as factor" ng-show="mood.happiness != null">
+<form ng-submit="factor.createFactor()">
   Why do you feel that way?<br/>
-  <input class="blurbbox" type="text" ng-model="factor.blurb" maxlength="140">
+  {{ factor.blurb }}<br/>
+  <input class="blurbbox"
+         type="text"
+         ng-model="factor.blurb"
+         ng-maxlength="140"
+         >
+  <input type="submit"
+         value="SUBMIT YOUR MOOD">
 </div>
-<input type="submit" value="SUBMIT YOUR MOOD">
 </form>
-</main>
