--- a/app/views/layouts/angular.html.erb
+++ b/app/views/layouts/angular.html.erb
@@ -13,9 +13,17 @@
   <header ng-controller="HeaderController as header">
     <span>
       <h1>
+        <!-- logo -->
         <span class="logo">S E N S U S</span>
         <br/>
-        <a href class="headerlink"="#">POST YOUR MOOD</a> | <a href class="headerlink"="#">SEE YOUR MOODS</a> | <a href class="headerlink"="#">MOOD CHART</a> | Welcome, {{ header.current_user.email }} </h1>
+        <!-- new mood post -->
+        <a href class="headerlink"="#">POST YOUR MOOD</a> |
+        <!-- see all mood posts -->
+        <a href class="headerlink"="#">SEE YOUR MOODS</a> |
+        <!-- D3 Mood Chart -->
+        <a href class="headerlink"="#">MOOD CHART</a> |
+        <!-- user page -->
+        Welcome, <a href class="headerlink"="#">{{ header.current_user.email }}</a> </h1>
   </header>
   </nav>
 
