--- a/app/views/angular.html.erb
+++ b/app/views/angular.html.erb
@@ -150,15 +150,38 @@
 </div>
 
 <!-- the factor form -->
-<div ng-controller="FactorController as factor" ng-show="mood.happiness != null">
+<div ng-controller="FactorController as factor" ng-show="mood.happiness == 1 || mood.happiness == 2 || mood.happiness == 3">
 <form ng-submit="factor.createFactor()">
-  Why do you feel that way?<br/>
-  {{ factor.blurb }}<br/>
+  Why are you feeling upset?<br/>
   <input class="blurbbox"
          type="text"
          ng-model="factor.blurb"
          ng-maxlength="140"
-         >
+         ng-value="factor.blurb">
+  <input type="submit"
+         value="SUBMIT YOUR MOOD">
+</div>
+
+<div ng-controller="FactorController as factor" ng-show="mood.happiness == 4 || mood.happiness == 5 || mood.happiness == 6">
+<form ng-submit="factor.createFactor()">
+  How could your day be better?<br/>
+  <input class="blurbbox"
+         type="text"
+         ng-model="factor.blurb"
+         ng-maxlength="140"
+         ng-value="factor.blurb">
+  <input type="submit"
+         value="SUBMIT YOUR MOOD">
+</div>
+
+<div ng-controller="FactorController as factor" ng-show="mood.happiness == 7 || mood.happiness == 8 || mood.happiness == 9 || mood.happiness == 10">
+<form ng-submit="factor.createFactor()">
+  What made your day awesome?<br/>
+  <input class="blurbbox"
+         type="text"
+         ng-model="factor.blurb"
+         ng-maxlength="140"
+         ng-value="factor.blurb">
   <input type="submit"
          value="SUBMIT YOUR MOOD">
 </div>
