--- a/app/views/angular.html.erb
+++ b/app/views/angular.html.erb
@@ -1,6 +1,6 @@
 <!-- the mood form -->
 <div ng-controller="MoodController as mood">
-<form ng-submit='mood.createMood()'>
+<form ng-submit='mood.createMood(happiness)'>
 
 
   <div id="emotions">
@@ -151,7 +151,7 @@
 
 <!-- the factor form -->
 <div ng-controller="FactorController as factor" ng-show="mood.happiness == 1 || mood.happiness == 2 || mood.happiness == 3">
-<form ng-submit="factor.createFactor()">
+<form ng-submit="factor.createFactor(blurb)">
   Why are you feeling upset?<br/>
   <input class="blurbbox"
          type="text"
@@ -163,7 +163,7 @@
 </div>
 
 <div ng-controller="FactorController as factor" ng-show="mood.happiness == 4 || mood.happiness == 5 || mood.happiness == 6">
-<form ng-submit="factor.createFactor()">
+<form ng-submit="factor.createFactor(blurb)">
   How could your day be better?<br/>
   <input class="blurbbox"
          type="text"
@@ -175,7 +175,7 @@
 </div>
 
 <div ng-controller="FactorController as factor" ng-show="mood.happiness == 7 || mood.happiness == 8 || mood.happiness == 9 || mood.happiness == 10">
-<form ng-submit="factor.createFactor()">
+<form ng-submit="factor.createFactor(blurb)">
   What made your day awesome?<br/>
   <input class="blurbbox"
          type="text"
