--- a/app/views/angular.html.erb
+++ b/app/views/angular.html.erb
@@ -143,7 +143,8 @@
 <!-- the factors form -->
 
 <!-- Negative Emotion Values -->
-<div ng-controller="FactorController as factor" ng-show="mood.happiness == 1 || mood.happiness == 2 || mood.happiness == 3">
+<div ng-controller="FactorController as factor" >
+<div ng-show="mood.happiness == 1 || mood.happiness == 2 || mood.happiness == 3">
 <form ng-submit="factor.createFactor()">
   Why are you feeling upset?<br/>
   <input class="blurbbox"
@@ -153,10 +154,11 @@
          ng-value="mood.factors">
   <input type="submit"
          value="SUBMIT YOUR MOOD">
+</form>
 </div>
 
 <!-- Neutral Emotion Values -->
-<div ng-controller="FactorController as factor" ng-show="mood.happiness == 4 || mood.happiness == 5 || mood.happiness == 6">
+<div ng-show="mood.happiness == 4 || mood.happiness == 5 || mood.happiness == 6">
 <form ng-submit="factor.createFactor()">
   How could your day be better?<br/>
   <input class="blurbbox"
@@ -166,10 +168,11 @@
          ng-value="mood.factors">
   <input type="submit"
          value="SUBMIT YOUR MOOD">
+</form>
 </div>
 
 <!-- Positive Emotion Values -->
-<div ng-controller="FactorController as factor" ng-show="mood.happiness == 7 || mood.happiness == 8 || mood.happiness == 9 || mood.happiness == 10">
+<div ng-show="mood.happiness == 7 || mood.happiness == 8 || mood.happiness == 9 || mood.happiness == 10">
 <form ng-submit="factor.createFactor()">
   What made your day awesome?<br/>
   <input class="blurbbox"
@@ -179,5 +182,6 @@
          ng-value="mood.factors">
   <input type="submit"
          value="SUBMIT YOUR MOOD">
+</form>
 </div>
 </div>
