--- a/app/views/layouts/angular.html.erb
+++ b/app/views/layouts/angular.html.erb
@@ -6,6 +6,8 @@
   <!-- <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %> -->
   <%= csrf_meta_tags %>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+
 </head>
 <body>
 
@@ -28,6 +30,10 @@
   </nav>
 
   <%= yield %>
+
+  <div ng-view></div>
+
   <%= javascript_include_tag 'angular', 'data-turbolinks-track' => true %>
+
 </body>
 </html>
