--- a/app/views/angular.html.erb
+++ b/app/views/angular.html.erb
@@ -1,11 +1,13 @@
 <!-- the mood form -->
 <div ng-controller="MoodController as mood">
 
+<!--!!!!!!!!!SUBMIT CREATE MOOD FORM WITH EMOJIS!!!!!!!!  -->
 <form ng-submit="mood.createMood()">
   <div id="emotions">
     Pick an emoji that best represents your mood:
     <br/>
     <br/>
+
 
 <!-- one -->
     <input id="one"
@@ -138,50 +140,44 @@
     </label>
     <br/>
     <br/>
+  <input type="submit" value="submit your current mood">
 
+</form>
+ <!--!!!!!!!!!CLOSE CREATE MOOD FORM WITH EMOJIS!!!!!!!!  -->
+
+<!--!!!!!!!!!CREATE FACTOR FORM IS BELOW !!!!!!!!!!!!!!!!!  -->
 
 <!-- the factors form -->
 
 <!-- Negative Emotion Values -->
-<div ng-controller="FactorController as factor" >
-<div ng-show="mood.happiness == 1 || mood.happiness == 2 || mood.happiness == 3">
-<form ng-submit="factor.createFactor()">
-  Why are you feeling upset?<br/>
-  <input class="blurbbox"
-         type="text"
-         ng-model="mood.factors"
-         ng-maxlength="140"
-         ng-value="mood.factors">
-  <input type="submit"
-         value="SUBMIT YOUR MOOD">
-</form>
-</div>
+ <!-- <div ng-controller="FactorController as factor"> -->   
 
-<!-- Neutral Emotion Values -->
-<div ng-show="mood.happiness == 4 || mood.happiness == 5 || mood.happiness == 6">
-<form ng-submit="factor.createFactor()">
-  How could your day be better?<br/>
-  <input class="blurbbox"
-         type="text"
-         ng-model="mood.factors"
-         ng-maxlength="140"
-         ng-value="mood.factors">
-  <input type="submit"
-         value="SUBMIT YOUR MOOD">
-</form>
-</div>
+<!-- <form ng-submit="mood.createFactor(mood.id)"> -->
+<!--   <div ng-show="mood.happiness == 1 || mood.happiness == 2 || mood.happiness == 3">
+    Why are you feeling upset?<br/>
+  </div> 
+  
+   <! Neutral Emotion Values -->
+ <!--  <div ng-show="mood.happiness == 4 || mood.happiness == 5 || mood.happiness == 6">
+    How could your day be better?<br/> 
+  </div>
 
-<!-- Positive Emotion Values -->
-<div ng-show="mood.happiness == 7 || mood.happiness == 8 || mood.happiness == 9 || mood.happiness == 10">
-<form ng-submit="factor.createFactor()">
-  What made your day awesome?<br/>
-  <input class="blurbbox"
-         type="text"
-         ng-model="mood.factors"
-         ng-maxlength="140"
-         ng-value="mood.factors">
-  <input type="submit"
-         value="SUBMIT YOUR MOOD">
-</form>
-</div>
-</div>
+  <div ng-show="mood.happiness == 7 || mood.happiness == 8 || mood.happiness == 9 || mood.happiness == 10">
+    What made your day awesome?<br/>
+  </div>
+  
+  <div ng-show="mood.happiness!= null">
+    <input class="blurbbox"
+           type="text"
+           ng-model="mood.factor_blurb"
+           ng-maxlength="140" />
+
+    <input type="submit"
+           value="SUBMIT YOUR MOOD">
+  </div> -->
+ 
+<!-- </form> -->
+ <!--!!!!!!!!!END FORM CREATE FACTOR FORM !!!!!!!!!!!!!!!!!  -->
+
+ <!-- </div>  factor  controller -->
+</div>  <!-- moodcontroller -->
