--- a/app/views/enter-factors.html
+++ b/app/views/enter-factors.html
@@ -1,3 +1,4 @@
+TRYING TO CREATE A LOG PAGE FOR ANGULAR TO ROUTE TO
 
 <p>Happiness Level Log
 <!-- This shows array w id, happiness , created_at, empty factors  -->
