--- a/app/views/angular.html.erb
+++ b/app/views/angular.html.erb
@@ -202,75 +202,72 @@
   <br/>
   <br/>
 
-    <div id = "moodPosts">
-
       <div id="emoji"
            ng-repeat="m in mood.current_user_moods | orderBy: '-created_at'">
         Posted: {{m.created_at | date:'MM/dd/yyyy @ h:mma'}}
 
           <!-- one -->
-          <div ng-show="m.happiness==1"
+          <span ng-show="m.happiness==1"
                class="emojishow">
             <%= image_tag "1.png" %>
-          </div>
+          </span>
 
           <!-- two -->
-          <div ng-show="m.happiness==2"
+          <span ng-show="m.happiness==2"
                class="emojishow">
             <%= image_tag "2.png" %>
-          </div>
+          </span>
 
           <!-- three -->
-          <div ng-show="m.happiness==3"
+          <span ng-show="m.happiness==3"
                class="emojishow">
             <%= image_tag "3.png" %>
-          </div>
+          </span>
 
           <!-- four -->
-          <div ng-show="m.happiness==4"
+          <span ng-show="m.happiness==4"
                class="emojishow">
             <%= image_tag "4.png" %>
-          </div>
+          </span>
 
           <!-- five -->
-          <div ng-show="m.happiness==5"
+          <span ng-show="m.happiness==5"
                class="emojishow">
             <%= image_tag "5.png" %>
-          </div>
+          </span>
 
           <!-- six -->
-          <div ng-show="m.happiness==6"
+          <span ng-show="m.happiness==6"
                class="emojishow">
             <%= image_tag "6.png" %>
-          </div>
+          </span>
 
           <!-- seven -->
-          <div ng-show="m.happiness==7"
+          <span ng-show="m.happiness==7"
                class="emojishow">
             <%= image_tag "7.png" %>
-          </div>
+          </span>
 
           <!-- eight -->
-          <div ng-show="m.happiness==8"
+          <span ng-show="m.happiness==8"
                class="emojishow">
             <%= image_tag "8.png" %>
-          </div>
+          </span>
 
           <!-- nine -->
-          <div ng-show="m.happiness==9"
+          <span ng-show="m.happiness==9"
                class="emojishow">
             <%= image_tag "9.png" %>
-          </div>
+          </span>
 
           <!-- ten -->
-          <div ng-show="m.happiness==10"
+          <span ng-show="m.happiness==10"
                class="emojishow">
             <%= image_tag "10.png" %>
-          </div>
+          </span>
 
-      <div ng-repeat="factor in m.factors">
+      <span ng-repeat="factor in m.factors">
         <h4>"{{factor.blurb}}"</h4>
-      </div>
+      </span>
 
     </div>
-</div>
