--- a/app/views/angular.html.erb
+++ b/app/views/angular.html.erb
@@ -1,9 +1,12 @@
-<div ng-controller="MoodController as mood">
+<div ng-controller="MoodController as mood"
+     id = "mood-form">
 
 <!-- EMOJI FORM -->
 <form ng-submit="mood.createMood()">
   <div id="emotions">
-    Pick an emoji that best represents your mood:
+    <span id = "pick">
+      Pick an emoji that best represents your mood:
+    </span>
     <br/>
     <br/>
 
@@ -16,7 +19,7 @@
            ng-model = "mood.happiness"/>
     <label class="mood one"
            for="one">
-      <%= image_tag "1.png" %>
+        <%= image_tag "1.png" %>
     </label>
 
 
@@ -151,7 +154,9 @@
     Why are you feeling upset?<br/><br/>
 
     <textarea type="text"
-              ng-model="mood.factorsBlurb">
+              ng-model="mood.factorsBlurb"
+              rows="5"
+              id="blurb">
     </textarea>
 
   </div>
@@ -164,7 +169,10 @@
 
     How could your day be better?<br/><br/>
 
-    <textarea type="text" ng-model="mood.factorsBlurb">
+    <textarea type="text"
+              ng-model="mood.factorsBlurb"
+              rows="5"
+              id="blurb">
     </textarea>
 
   </div>
@@ -178,7 +186,10 @@
 
     Why was your day so awesome?<br/><br/>
 
-    <textarea type="text" ng-model="mood.factorsBlurb">
+    <textarea type="text"
+              ng-model="mood.factorsBlurb"
+              rows="5"
+              id="blurb">
     </textarea>
 
   </div>
@@ -188,86 +199,100 @@
   <input ng-show="!!mood.happiness &&
                   mood.factorsBlurb.length > 0"
          type="submit"
-         value="Submit Your Mood">
+         value="Submit Your Mood"
+         id = "moodsubmit">
 </form>
 </div>
 <!-- END OF FORMS -->
 
 
 
-
+<!-- !! MOVE TO MOODS.HTML -->
 <!-- SHOWING ALL POSTS -->
 <div ng-controller="MoodController as mood">
   Your Happiness
   <br/>
   <br/>
 
-      <div id="emoji"
-           ng-repeat="m in mood.current_user_moods | orderBy: '-created_at'">
-        Posted: {{m.created_at | date:'MM/dd/yyyy @ h:mma'}}
+      <div id="moodpost"
+           ng-repeat="m in mood.current_user_moods |
+                      orderBy: '-created_at'">
+
+
+        <!-- DATE -->
+        <!-- LINKS TO MOOD SHOW PAGE -->
+        <a href="#">
+            {{m.created_at | date:'MM/dd/yyyy @ h:mma'}}
+        </a>
+        <br/>
+        <br/>
+
+
+        <!-- EMOJIS -->
 
           <!-- one -->
           <span ng-show="m.happiness==1"
-               class="emojishow">
+                class="emojishow">
             <%= image_tag "1.png" %>
           </span>
 
           <!-- two -->
           <span ng-show="m.happiness==2"
-               class="emojishow">
+                class="emojishow">
             <%= image_tag "2.png" %>
           </span>
 
           <!-- three -->
           <span ng-show="m.happiness==3"
-               class="emojishow">
+                class="emojishow">
             <%= image_tag "3.png" %>
           </span>
 
           <!-- four -->
           <span ng-show="m.happiness==4"
-               class="emojishow">
+                class="emojishow">
             <%= image_tag "4.png" %>
           </span>
 
           <!-- five -->
           <span ng-show="m.happiness==5"
-               class="emojishow">
+                class="emojishow">
             <%= image_tag "5.png" %>
           </span>
 
           <!-- six -->
           <span ng-show="m.happiness==6"
-               class="emojishow">
+                class="emojishow">
             <%= image_tag "6.png" %>
           </span>
 
           <!-- seven -->
           <span ng-show="m.happiness==7"
-               class="emojishow">
+                class="emojishow">
             <%= image_tag "7.png" %>
           </span>
 
           <!-- eight -->
           <span ng-show="m.happiness==8"
-               class="emojishow">
+                class="emojishow">
             <%= image_tag "8.png" %>
           </span>
 
           <!-- nine -->
           <span ng-show="m.happiness==9"
-               class="emojishow">
+                class="emojishow">
             <%= image_tag "9.png" %>
           </span>
 
           <!-- ten -->
           <span ng-show="m.happiness==10"
-               class="emojishow">
+                class="emojishow">
             <%= image_tag "10.png" %>
           </span>
 
+      <!-- BLURB -->
       <span ng-repeat="factor in m.factors">
         <h4>"{{factor.blurb}}"</h4>
       </span>
-
     </div>
+  </div>
