--- a/public/angular_templates/show.html.erb
+++ b/public/angular_templates/show.html.erb
@@ -2,3 +2,5 @@
 <a href="/moods/:id">Show single mood</a>
 <a href="/users/:id">Show single user</a>
 <a href="/chart">D3 resides here</a>
+
+<h1>This would be the show singular mood page</h1>
