added bower and file upload

--- a/app/views/angular.html.erb
+++ b/app/views/angular.html.erb
@@ -296,3 +296,9 @@
       </span>
     </div>
   </div>
+
+  <div ng-app="app">
+    <div ng-controller="AppController">
+        <input type="file" nv-file-select uploader="uploader"/><br/>
+    </div>
+</div>
