--- a/app/views/layouts/angular.html.erb
+++ b/app/views/layouts/angular.html.erb
@@ -7,7 +7,6 @@
   <%= csrf_meta_tags %>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
-
   <base href="/"> </base>
 
 </head>
@@ -21,22 +20,22 @@
         <span class="logo">S E N S U S</span>
         <br/>
         <!-- new mood post -->
-        <a href class="headerlink"="#">POST YOUR MOOD</a> |
+        <a href="/form" class="headerlink">POST YOUR MOOD</a> |
         <!-- see all mood posts -->
-        <a href="/moods" class="headerlink"="#">SEE YOUR MOODS</a> |
+        <a href="/moods" class="headerlink">SEE YOUR MOODS</a> |
         <!-- D3 Mood Chart -->
-        <a href class="headerlink"="#">MOOD CHART</a> |
+        <a href="/chart" class="headerlink">MOOD CHART</a> |
         <!-- user page -->
         Welcome, <a href class="headerlink"="#">{{ header.current_user.email }}</a> </h1>
   </header>
 
   </nav>
 
+     <%= yield %>
+
    <div ng-view>
 
-   <%= yield %>
-
-</div>
+  </div>
 
 
   <%= javascript_include_tag 'angular', 'data-turbolinks-track' => true %>
