--- a/app/views/layouts/angular.html.erb
+++ b/app/views/layouts/angular.html.erb
@@ -23,7 +23,7 @@
     <span>
       <h1>
         <!-- logo -->
-        <span class="logo">S E N S U S</span>
+        <span class="logo" class="animate">S E N S U S</span>
         <br/>
         <!-- new mood post -->
         <a href="/form" class="headerlink">POST YOUR MOOD</a> |
@@ -36,17 +36,9 @@
   </header>
   </nav>
 
-<<<<<<< HEAD
   <%= yield %>
    <div ng-view>
 </div>
-=======
-     <%= yield %>
-
-   <div ng-view>
-
-  </div>
->>>>>>> tuesday2
 
 
   <%= javascript_include_tag 'angular', 'data-turbolinks-track' => true %>
